Organized folders. Fonts, images, sounds now have dedicated folders.

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
- @font-face { font-family: GameBoy; src: url('GameBoy.ttf'); } 
+ @font-face { font-family: GameBoy; src: url('font/GameBoy.ttf'); } 
 
 #background {
    background-color: black; 
