--- a/battle.css
+++ b/battle.css
@@ -1,9 +1,7 @@
-#screen {
-    transition: opacity 1s;
-}
 .gengar{
     position:absolute;
     bottom:-61px;
+    left: 0;
     transform: scale(0.5,0.5);
     transition: opacity 1s;
 }
@@ -19,7 +17,7 @@
 #basegengar {
     opacity: 1;
 }
-#screen:hover #basegengar {
+#battle:hover #basegengar {
     animation-name: change;
     animation-duration: 2s;
     animation-iteration-count: 1;
@@ -30,7 +28,7 @@
     100% {opacity: 0;}
 }
 
-#screen:hover #gengarup {
+#battle:hover #gengarup {
     animation-name: windup;
     animation-duration: 2s;
     animation-iteration-count: 1;
@@ -47,7 +45,7 @@
     100% {opacity: 0;}
 }
 
-#screen:hover #gengardown{
+#battle:hover #gengardown{
     animation-name: attack;
     animation-duration: 2s;
     animation-iteration-count: 1;
@@ -75,13 +73,24 @@
     }
     
 }
-#fade:hover + #screen .gengar{
+#link:hover + #battle .gengar {
     opacity: 0;
 }
 body {
     font-family: Gameboy, arial;
 }
-#fade {
-    text-align: center;
-    margin: auto;
+
+#logoR {
+    position: relative;
+    width: 50%;
+    left: 25%;
+    top: 40%;
+    animation-name: down;
+    animation-duration: 5s;
+    animation-iteration-count: 1;
+}
+
+@keyframes down {
+    from { top: -15%}
+    to { top: 40%}
 }
