--- a/battle.css
+++ b/battle.css
@@ -160,3 +160,51 @@ body {
     }
     75% {opacity: 0;}
 }
+
+#nido:hover #basenidorino {
+    animation-name: hop;
+    animation-duration: 4s;
+    animation-iteration-count: 1;
+}
+
+@keyframes hop {
+    5% {transform: translate(10px, -10px) scale(0.5,0.5);}
+    10% {transform: translate(20px, 0px) scale(0.5,0.5);}
+    15% {transform: translate(10px, -10px) scale(0.5,0.5);}
+    20% {transform: translate(0px, 0px) scale(0.5,0.5);}
+    25% {transform: translate(10px, -10px) scale(0.5,0.5);}
+    30% {transform: translate(20px, 0px) scale(0.5,0.5);}
+    35% {transform: translate(10px, -10px) scale(0.5,0.5);}
+    40% {transform: translate(0px, 0px) scale(0.5,0.5);}
+    45% {transform: translate(0px, 0px) scale(0.5,0.5);}
+    50% {transform: translate(50px, -50px) scale(0.5,0.5);}
+    55% {transform: translate(100px, 0px) scale(0.5,0.5);}
+    59% {
+        transform: translate(100px, 0px) scale(0.5,0.5);
+        opacity: 1;
+    }
+    60% {opacity: 0;}
+    100% {opacity: 0;}
+}
+
+#nido:hover #nidojump {
+    animation-name: jump;
+    animation-duration: 1.6s;
+    animation-iteration-count: 1;
+    animation-delay: 2.4s;
+}
+
+@keyframes jump {
+    0% {
+        opacity: 1;
+        transform: translate(100px, 0px) scale(0.5,0.5);
+    }
+    25% {transform: translate(50px, -60px) scale(0.625,0.625);}
+    50% {transform: translate(-20px, -30px) scale(0.75,0.75);}
+    75% {transform: translate(-20px, -30px) scale(0.75,0.75);}
+    87.5% {transform: translate(10px, -50px) scale(0.625,0.625);}
+    100% {
+        transform: translate(10px, 0px) scale(0.5,0.5);
+        opacity: 1;
+    }
+}
