--- a/room.css
+++ b/room.css
@@ -1,23 +1,20 @@
 
 #room {
     position: absolute;
-    transform: scale(.5,.5);
-    top:-188%;
-    left:-213%; /*up right*/
+    transform: scale(2.5,2.5);
+    top:-123%;/*top 37% bottom -123%*/
+    left:-18%; 
     
     z-index:0;
     animation-timing-function: linear;
     animation-name: scroll;
-    animation-duration: 5.5s;
-    animation-iteration-count: infinite;
+    animation-duration: 3.5s;
+    animation-iteration-count: 1;
 }
 
 @keyframes scroll {
-    0% {top:-188%}
-    20% {top:-188%}
-    50% {top:-262% }
-    80% {top : -188%}
-    100% {top: -188%}
+    0% {top:37%}
+    100% {top: -123%}
 
 }
 
@@ -25,7 +22,7 @@
     position: relative;
     transform: scale(2.8,2.8);
     top:-15%;
-    left:76.5%;
+    left:84%;
     z-index: 5;
 }
 
@@ -35,8 +32,8 @@
     opacity: 1;
     animation-timing-function: linear;
     animation-name: walkMid;
-    animation-duration: 1s;
-    animation-iteration-count: infinite
+    animation-duration: .8s;
+    animation-iteration-count: 4
 }
 
 
@@ -57,8 +54,8 @@
     opacity: 0;
     animation-timing-function: linear;
     animation-name: walkDR;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
+    animation-duration: .8s;
+    animation-iteration-count: 4;
 }
 
 
@@ -78,8 +75,8 @@
     opacity: 0;
     animation-timing-function: linear;
     animation-name: walkDL;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
+    animation-duration: .8s;
+    animation-iteration-count: 4;
 }
 
 @keyframes walkDL {
