--- a/style.css
+++ b/style.css
@@ -90,4 +90,34 @@
 /* Minor adjustment for size of audio controll box. */
 audio {
     width: 270px;
-}    
+}
+
+
+/* Black boxes used to hide the stack of images on the 
+ * left and right side of the screen. 
+ * Set opacity to 0 to view how animations work, or set
+ * color to red to view where the boxes sit. 
+ */
+.box {
+    position: fixed;
+    background-color: red;
+    opacity: 1;
+    bottom: 10%;
+    height: 400px;  
+    z-index: 4;
+}
+
+#boxL {
+    position: fixed;
+    left: 18.3%;
+    width: 150px;    
+}
+
+#boxR {
+    position: fixed;
+    left: 61.2%;
+     width: 400px;
+}
+#screen {
+    z-index: 5;
+}
