--- a/walk.css
+++ b/walk.css
@@ -1,20 +1,20 @@
 
-#room {
+#path {
     position: absolute;
     transform: scale(2.5,2.5);
     top:-123%;/*top 37% bottom -123%*/
-    left:-18%; 
+    left:-20%; 
     
     z-index:0;
     animation-timing-function: linear;
     animation-name: scroll;
-    animation-duration: 3.5s;
-    animation-iteration-count: 1;
+    animation-duration: 6.5s;
+    animation-iteration-count: infinite;
 }
 
 @keyframes scroll {
-    0% {top:37%}
-    100% {top: -123%}
+    0% {top:100%}
+    100% {top: -170%}
 }
 
 #trainer {
@@ -32,20 +32,21 @@
     animation-timing-function: linear;
     animation-name: walkMid;
     animation-duration: .8s;
-    animation-iteration-count: 4
+    animation-iteration-count: infinite;
 }
 
 
 @keyframes walkMid {
-    20% {opacity: 1}
-    21% {opacity: 0}
-    39% {opacity: 0}
-    40% {opacity: 1}
-    59% {opacity: 1}
-    60% {opacity: 0}
-    79% {opacity: 0}
-    80% {opacity: 1}
-    100% {opacity: 1}
+    0% {opacity: 1}
+    24% {opacity: 1}
+    25% {opacity: 0}
+    49% {opacity: 0}
+    50% {opacity: 1}
+    74% {opacity: 1}
+    75% {opacity: 0}
+    100% {opacity: 0}
+
+
 }
 
 #walkDR {
@@ -54,17 +55,16 @@
     animation-timing-function: linear;
     animation-name: walkDR;
     animation-duration: .8s;
-    animation-iteration-count: 4;
+    animation-iteration-count: infinite;
 }
 
 
 @keyframes walkDR {
     0% {opacity: 0}
-    20% {opacity: 0}
-    21% {opacity: 1}
-    39% {opacity: 1}
-    40% {opacity: 0}
-    100% {opacity: 0}
+    24% {opacity: 0}
+    25% {opacity: 1}
+    49% {opacity: 1}
+    50% {opacity: 0}
 }
 
 
@@ -75,14 +75,13 @@
     animation-timing-function: linear;
     animation-name: walkDL;
     animation-duration: .8s;
-    animation-iteration-count: 4;
+    animation-iteration-count: infinite;
 }
 
 @keyframes walkDL {
     0% {opacity: 0}
-    59% {opacity: 0}
-    60% {opacity: 1}
-    79% {opacity: 1}
-    80% {opacity: 0}
-    100% {opacity: 0}
+    50% {opacity: 0}
+    74% {opacity: 0}
+    75% {opacity: 1}
+    100% {opacity: 1}
 }
