--- a/style.css
+++ b/style.css
@@ -89,35 +89,18 @@
 
 /* Minor adjustment for size of audio controll box. */
 audio {
+    position: relative;
     width: 270px;
+    z-index: 999;
 }
 
-
-/* Black boxes used to hide the stack of images on the 
- * left and right side of the screen. 
- * Set opacity to 0 to view how animations work, or set
- * color to red to view where the boxes sit. 
- */
-.box {
-    position: fixed;
-    background-color: red;
-    opacity: 1;
-    bottom: 10%;
-    height: 400px;  
-    z-index: 4;
+h1 {
+    position: relative;
+    z-index: 999;
+    font-family: GameBoy;
+    font-size: 15pt;
 }
 
-#boxL {
-    position: fixed;
-    left: 18.3%;
-    width: 150px;    
-}
-
-#boxR {
-    position: fixed;
-    left: 61.2%;
-     width: 400px;
-}
 #screen {
     z-index: 5;
 }
